feat: 添加 Unreal 已经安装版本的检查函数

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ else()
             SubUI/UpdatePlugins/updateplugindialogue.h SubUI/UpdatePlugins/updateplugindialogue.cpp SubUI/UpdatePlugins/updateplugindialogue.ui
             CommonData.h
             CommonData.h
+            Util/unrealhelper.h Util/unrealhelper.cpp
 
 
         )
